--- a/elegance/elegance.template.html
+++ b/elegance/elegance.template.html
@@ -11,7 +11,7 @@
 
         body {
             font-family: 'Sorts Mill Goudy';
-            background-color: 222;
+            background-color: #dddddd;
         }
 
         h1, h2, h3 {
@@ -21,9 +21,18 @@
 
         .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
+        .inverse {
+            color: #dddddd;
+            background-color: #222222;
+        }
+
         .one-big {
             font-size: 42px;
             margin-top: 150px;
+        }
+        .one-big-tall {
+            font-size: 42px;
+            margin-top: 50px;
         }
         .two-big {
             font-size: 36px;
@@ -36,6 +45,10 @@
         .four-big {
             font-size: 36px;
             margin-top: 50px;
+        }
+
+        .big-para {
+            font-size: 30px;
         }
     </style>
 </head>
