Elegance talk, internal LS version

--- a/elegance/elegance.html
+++ b/elegance/elegance.html
@@ -112,6 +112,9 @@ layout: false
 class: center, top
 
 # Elegance FTW
+???
+But every once in a while we come across a solution that is Both/And instead
+of Either/Or
 
 --
 
@@ -121,8 +124,8 @@ class: center, top
 
 .center.two-big[More Secure & Easier To Use]
 ???
-But, in addition to these day-to-day wins, over the years we do see examples
-of elegance in larger scale...
+Over the years we've seen things within our industry come along that I believe 
+are elegant solutions, or at least furthering our journey towards elegance...
 
 ---
 
@@ -149,7 +152,8 @@ class: center, middle
 I don't intend to get into this debate
 
 But thinking it through did help my identify where I think dhh went wrong, 
-and I think this same pattern can apply to many situations. 
+and I think this same pattern can apply to many situations where something
+more elegant has been introduced in our industry
 
 ---
 
@@ -179,6 +183,14 @@ class: center, top
 # Whether Ignorance or Malice
 --
 .center.one-big[Means over End]
+???
+All of these groups are just variations on people mistaking the means
+for the end.
+
+But it can be difficult to judge, especially once something is into
+or past the adoption phase and there's a LOT of activity around it, 
+are we seeing corruption of an elegant solution, or is the supposed 
+elegant solution inherently problematic .
 
 ---
 
@@ -233,8 +245,8 @@ class: center, middle
 ???
 All the time we have to grapple with where to draw the line in pursuit of the
 ideal in order to keep things moving. Sometimes we know if we could just re-design
-things first, then this new addition would be easier, but we really don't seem 
-to ever have the time to 
+things first, then this new addition would be easier, but we frequently don't seem 
+to have the time to 
 
 ---
 
@@ -244,16 +256,16 @@ to ever have the time to
 (3) Profit!
 ]
 ???
-Do this the right way, and instead have to be vanquished 
+...do this the right way, and instead often times get caught up 
 ---
 
 .one-big[
 (1) Write first crap that comes to mind<br/>
 (2) <strike>Attain Ideal</strike> #SHIPIT<br/>
-(3) Profit!
+(3) Profit???
 ]
 ???
-in the field of combat by a hoard of reality-wielding yaks.  
+in doing it this way. Ending many days with defeat.   
 ---
 
 .one-big[
@@ -325,14 +337,14 @@ class: center, middle
 ![Shut Up I Hate You (Hyperbole and a Half)](http://content.screencast.com/users/the_chrismo/folders/Jing/media/76aaba9b-b388-4a90-bb72-5b92bfb0d41e/00000605.png)
 ???
 It's at this point someone flips the plate of danishes off the conference room 
-table and everyone leaves and goes back to work.  
+table and then everyone goes back to work.  
 
 ---
 
 .one-big[
 (1) Write first crap that comes to mind<br/>
 (2) <strike>Attain Ideal</strike> #SHIPIT<br/>
-(3) Profit!
+(3) Profit???
 ]
 
 ---
@@ -344,9 +356,38 @@ class: center, top
 .center.one-big[Ideal and Pragmatic]
 
 ???
-I think clarifying the context of statements is important, and try
-to debate either the ideal we're shooting for, or the current 
-constraints, but maybe not both simultaneously.
+I think clarifying the context of statements is important, and focus 
+on debating either the ideal we're shooting for...
+
+---
+
+# Same Page
+
+.center.two-big[“[Ideal!]”]
+.center.two-big[“[Ideal!]”]
+
+???
+or the current constraints
+
+---
+
+# Same Page
+
+.center.two-big[“[Pragmatic!]”]
+.center.two-big[“[Pragmatic!]”]
+
+???
+but maybe not both simultaneously.
+
+---
+
+# Careful...
+
+.center.two-big[“[Ideal!]”]
+.center.two-big[“[Pragmatic!]”]
+
+???
+but maybe not both simultaneously.
 
 ---
 
@@ -356,7 +397,8 @@ class: center, middle, inverse
 
 ![Segway Crash](http://i817.photobucket.com/albums/zz94/overkillphil/segway_crash.jpg)
 ???
-And now for something completely different. Sort of.
+And now for something completely different. Sort of. A semi-related bonus track
+if you will.
 
 ---
 
@@ -366,7 +408,7 @@ class: center, middle
 
 ![Are You Kidding Me Meme Face](http://www.my-favorite-coloring.net/Images/Large/Famous-characters-Troll-face-Are-you-kidding-me-417533.png)
 ???
-Back to the Is TDD Dead hangouts 
+In the last IsTDDDead hangout, if you waded through it ...
 ---
 
 class: center, middle
@@ -374,6 +416,8 @@ class: center, middle
 # With MOAR DHH
 
 ![DHH from IsTDDDead](http://i1.ytimg.com/vi/YNw4baDz6WA/0.jpg)
+???
+... there were some really interesting nuggets on the subject of confidence.
 
 ---
 
@@ -385,28 +429,29 @@ class: center, middle
 
 .right.three-big[— Kent Beck]
 ???
-In the last IsTDDDead hangout, if you waded through it, there were some
- really interesting nuggets around confidence.
-
 First, Kent describes how TDD helps him drive out
 the specifics of a design. "I've had an insight and I think if only I had 
 this kind of object then I can separate out the complexity. So here's an 
 example usage, and then I want to see the implementation, because 
-sometimes the implementation will inform the API ... " and so on.
- 
-This gives him a liv
+sometimes the implementation will inform the API ... " and basically he
+just goes on to describe the core idea of TDD, the design back that it
+provides going back and forth between interface and implementation. 
  
 ---
 
 # TDD for Personal Confidence
 
-.big-para[Kent: “Programmers are prone to masochism. we'll do things over 
+.big-para[Kent: “Programmers are prone to masochism. We'll do things over 
 and over again. We'll put up with complicated systems, we'll be in 
 dysfunctional social relationships at work and figure, oh well, people 
 will just always yell at me. I grew up being taught to expect that. I'm just 
 not going to feel confident, I'm not going to be able to measure progress, 
 I'm not going to know whether I had any impact.”] 
+???
+But then he goes on to provide some more back story on his motivations for
+ pursuing TDD.
  
+And I know it's bad form to just read slides, but tough cookie.
 ---
 
 # TDD for Personal Confidence
@@ -436,10 +481,12 @@ class: center, middle
 
 # Not Just DHH
 ???
-A friend of mine at the RailsConf keynote felt that maybe a third of the crowd
-seemed to feel vindicated by DHH's statements, and at a recent lunch here in 
+A friend of mine at the RailsConf keynote felt a bit vindicated by DHH's 
+statements, and at a recent lunch here in 
 Dallas, Chris mentioned he had a similar reaction as he doesn't have
-the same depth of experience on the subject that others like myself do. 
+the same depth of experience on the subject that others like myself do and at
+ times during rants about DHH in Campfire didn't 
+ necessarily feel comfortable to speak up and share their experiences. 
 
 Which quickly led me back to   
   
@@ -472,6 +519,8 @@ Because what's fascinating to me when looking at what drove Kent to promote
 TDD in the first place, and what drove DHH to call out TDD recently was the
 SAME THING - a desire to feel confident and to feel free in expressing 
 oneself.
+
+Or as Kent said, to be my whole self at work.
  
 ---
 
