--- a/elegance/elegance.html
+++ b/elegance/elegance.html
@@ -427,7 +427,7 @@ So far, we've looked at two general problems.
 ???
 But I want to tack on a 3rd problem. 
 --
-.center.three-big[Personal Conflict]
+.center.three-big[Resistance]
 
 ---
 
