Final tweaks on estimate talk.

--- a/estimation/estimation.template.html
+++ b/estimation/estimation.template.html
@@ -50,6 +50,30 @@
         .big-para {
             font-size: 30px;
         }
+
+        /* unvisited link */
+        a:link {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        /* visited link */
+        a:visited {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        /* mouse over link */
+        a:hover {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        /* selected link */
+        a:active {
+            color: #000000;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
