--- a/estimation/estimation.template.html
+++ b/estimation/estimation.template.html
@@ -4,10 +4,10 @@
     <title>Vague Estimates are Vague</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-        @import url(http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
-        @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-        @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-        @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+        @import url(https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
+        @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+        @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+        @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
         body {
             font-family: 'Sorts Mill Goudy';
@@ -82,7 +82,7 @@
     <!-- include estimation.md -->
 
 </textarea>
-<script src="http://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
 </script>
 <script type="text/javascript">
     var slideshow = remark.create();
