--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>cLabs Talks</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-        @import url(http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
-        @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-        @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-        @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+        @import url(https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
+        @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+        @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+        @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
         body {
             font-family: 'Sorts Mill Goudy';
