--- a/bundler/bundler.html
+++ b/bundler/bundler.html
@@ -153,7 +153,7 @@ No significant companies have joined in the last 6 months.
 
 
 </textarea>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+<script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
 </script>
 <script type="text/javascript">
     var slideshow = remark.create();
