--- a/elegance/elegance.html
+++ b/elegance/elegance.html
@@ -609,7 +609,7 @@ whether the application of the technique was faulty."
 
 
 </textarea>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+<script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
 </script>
 <script type="text/javascript">
     var slideshow = remark.create();
