--- a/estimation/estimation.html
+++ b/estimation/estimation.html
@@ -546,7 +546,7 @@ Juggling!!
 
 
 </textarea>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+<script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
 </script>
 <script type="text/javascript">
     var slideshow = remark.create();
