--- a/estimation/estimation.template.html
+++ b/estimation/estimation.template.html
@@ -82,7 +82,7 @@
     <!-- include estimation.md -->
 
 </textarea>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+<script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
 </script>
 <script type="text/javascript">
     var slideshow = remark.create();
