--- a/productivity/productivity.html
+++ b/productivity/productivity.html
@@ -86,6 +86,8 @@ class: center, middle
 
 TODO: 
 - Disable OS notifications.
+- - IF YOU NEED SLACK ALERTS FROM THE HOST THOUGH, MAY WANT TO LEAVE THEM ON.
+- - (sharing in some online tools will hide the video feed from everyone else).
 - Shut down other apps.
 - Adjust the presenter notes font size. 
 - Reload, then Clone (`c` shortcut).
