Big slide and layout pass

--- a/wicswac/wicswac.html
+++ b/wicswac/wicswac.html
@@ -85,20 +85,14 @@ class: center, middle
 
 TODO: 
 - Disable OS notifications.
-- - IF YOU NEED SLACK ALERTS FROM THE HOST THOUGH, MAY WANT TO LEAVE THEM ON.
-- - (sharing in some online tools will hide the video feed from everyone else).
 - Shut down other apps.
-- Adjust the presenter notes font size. 
 - Reload, then Clone (`c` shortcut).
+- Adjust the presenter notes font size. 
 
----
-
-???
-
-Before I get going, given the current state of things with the internet these days, 
-concerns
-about privacy and folks struggling to have control over their own information,
-I just need to say this: everything I’m about to say is off the record.
+Before I get going, given the current state of things with the internet these
+days, concerns about privacy and folks struggling to have control over their
+own information, I just need to say this: everything I’m about to say is off
+the record.
 
 ---
 
@@ -108,48 +102,49 @@ class: center, middle
 
 ???
 
-Greetings, my name is Chris Morris - I’m the director of engineering for Mystery
-Science - NOT Theater 3000 - nerds 
+Greetings, my name is Chris Morris - I’m the director of engineering for
+Mystery Science - NOT Theater 3000 - nerds
 
 WE make awesome science videos and activities for elementary age kids. 
 
 If you wanna come help save the next generation’s brains, come join us.
 
-
-5 years ago, on this very spot, in Portland, I gave a lightning talk on 
-Impostor Syndrome. I've returned today, 5 years in the future, to talk about 
-something completely different. 
+5 years ago, on this very spot, in Portland, I gave a lightning talk on
+Impostor Syndrome. I've returned today, 5 years in the future, to talk about
+something completely different.
 
 ---
 
-.center[<img src="profile.github.png" width="50%" />] 
+class: center, middle
+
+.center[<img src="profile.github.png" width="90%" />] 
 
 ???
 
-This is my profile on GitHub. I’m not showing this to you to brag about the huge 
-number
-of repos I’ve forked and never done anything with, nor is it to share my joy 
-over it being the only online 
-service
-where I’ve been able to obtain my preferred login name without having to resort
-to *CLICK* creativity. (slide of charismuerte at UHC and twitter, etc. 
-steam)
+This is my profile on GitHub. I’m not showing this to you to brag about the
+huge number of repos I’ve forked and never done anything with, nor is it to
+share my joy over it being the only online service where I’ve been able to
+obtain my preferred login name without having to resort to creativity.
 
 ---
+
+class: center, middle
 
 .center[<img src="profile.twitter.png" width="50%" />]
 
 ???
 
-(Twitter showing). Like *CLICK* this.
+Like *CLICK* this.
 
 ---
 
-.center[<img src="profile.steam.png" width="50%" />]
+class: center, middle
+
+.center[<img src="profile.steam.png" width="90%" />]
 
 ???
 
-(Steam showing). Or *CLICK* this.
+Or *CLICK* this.
 
 ---
 
@@ -158,21 +153,25 @@ steam)
 
 ???
 
-(UHC showing). 
-
-But also to pay tribute to Why the Lucky Stiff with my *CLICK* avatar 
+But to pay tribute to Why the Lucky Stiff  
 
 ---
 
-.center[<img src="profile.myuhc.png" width="50%" />]
+class: center, middle
+
+.center[<img src="profile.fox.png" width="50%" />]
 
 ???
 
-of a cartoon fox that he drew, and I might be in copyright violation of. 
+But to pay tribute to Why the Lucky Stiff
+with my avatar of a cartoon fox that he drew, and I might be in copyright
+violation of.
 
 ---
 
-.center[<img src="whyday.org.orig.png" width="50%" />]
+class: center, middle
+
+.center[<img src="whyday.org.orig.png" width="90%" />]
 
 ???
  
@@ -181,7 +180,9 @@ this site whyday.org ...
 
 ---
 
-.center[<img src="whyday.now.germ.png" width="50%" />]
+class: center, middle
+
+.center[<img src="whyday.now.germ.png" width="90%" />]
 
 ???
 
@@ -189,7 +190,9 @@ which today has clearly been taken over by a very lonely German.
 
 ---
 
-.center[<img src="whyday.now.eng.png" width="50%" />]
+class: center, middle
+
+.center[<img src="whyday.now.eng.png" width="90%" />]
 
 ???
 
@@ -197,18 +200,22 @@ Who's into sports betting on goats and Bingo.
 
 ---
 
-.center[<img src="why.documentary.png" width="50%" />]
+class: center, middle
+
+.center[<img src="why.documentary.png" width="90%" />]
 
 ???
 
-5-and-a-half years ago, not on this very spot, at RubyConf, a wonderful documentary 
-on _why by Kevin Triplett was shown, but we don't have time to show it, this is a 
-lightning talk, I don't even have time to talk about it much less show the trailer, 
-so we'll just skip to the part 
+5-and-a-half years ago, not on this very spot, at RubyConf, a wonderful
+documentary on _why by Kevin Triplett was shown, but we don't have time to show
+it, this is a lightning talk, I don't even have time to talk about the trailer,
+so we'll just skip to the part
 
 ---
 
-.center[<img src="guide.book.png" width="50%" />]
+class: center, middle
+
+.center[<img src="guide.book.png" width="90%" />]
 
 ???
 
@@ -216,7 +223,9 @@ of the book
  
 ---
 
-.center[<img src="guide.why.png" width="50%" />]
+class: center, middle
+
+.center[<img src="guide.why.png" width="90%" />]
 
 ???
 
@@ -224,7 +233,9 @@ that why wrote
  
 ---
 
-.center[<img src="guide.ruby.png" width="50%" />]
+class: center, middle
+
+.center[<img src="guide.ruby.png" width="90%" />]
 
 ???
 
@@ -232,7 +243,9 @@ about Ruby
  
 ---
 
-.center[<img src="guide.foxes.png" width="50%" />]
+class: center, middle
+
+.center[<img src="guide.foxes.png" width="90%" />]
 
 ???
 
@@ -240,29 +253,38 @@ where cartoon foxes show up
  
 ---
 
-.center[<img src="guide.chunky.bacon.png" width="50%" />]
+class: center, middle
+
+.center[<img src="guide.chunky.bacon.png" width="90%" />]
 
 ???
 
 and start saying chunky bacon.
 
 So ... who's into conspiracies? Don't raise your hands you fools! 
-That's what they _want_ you to do.
+That's what they *want* you to do.
+
+or y'all are lying and your refusal to participate is clearly a
+conspiracy.
  
 ---
 
-.center[<img src="translate.eng.to.germ.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="translate.eng.to.germ.png" width="100%" />]
 
-If we translate “chunky bacon” into German and then
-BACK into English we get our first clue. 
+???
+
+If we translate "chunky bacon" into German and then BACK into English we get
+our first clue.
  
 ---
 
-.center[<img src="translate.germ.to.lumpy.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="translate.germ.to.lumpy.png" width="100%" />]
+
+???
 
 “Lumpy bacon.” 
 
@@ -270,17 +292,21 @@ If we translate THAT into a “Y” language
 
 ---
 
-.center[<img src="translate.lumpy.to.yiddish.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="translate.lumpy.to.yiddish.png" width="100%" />]
+
+???
 
 Yiddish, for example, and then back. We get 
  
 ---
 
-.center[<img src="translate.yiddish.to.lipy.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="translate.yiddish.to.lipy.png" width="100%" />]
+
+???
 
 “Lipy Bacon”.
 
@@ -289,34 +315,42 @@ Now ... .... I have no idea what that is - but LOOK AT THIS.
  
 ---
 
-.center[<img src="translate.dym.lipsy.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="translate.dym.lipsy.png" width="100%" />]
+
+???
 
 Did I mean “Lipsy Bacon” - Why, of course I meant that.
 
  
 ---
 
-.center[<img src="search.lipsy.bacon.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="search.lipsy.bacon.png" width="100%" />]
+
+???
 
 With a search on that, then an obvious connection through Ralph Lauren 
  
 ---
 
-.center[<img src="search.flbbt.zoom.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="search.flbbt.zoom.png" width="100%" />]
+
+???
 
 we find a rare thing on the the internet - a PentaGooglewhack.
 
 ---
 
-.center[<img src="search.results.flbbt.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="search.results.flbbt.png" width="100%" />]
+
+???
 
 But not only that. A five-part term PentaGooglewhack. 
 
@@ -326,20 +360,23 @@ We only have to scroll down on the page to see who is SPONSORING this insanity.
  
 ---
 
-.center[<img src="search.stitch.fix.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="search.stitch.fix.ad.png" width="100%" />]
 
-Stitch Fix. - Exactly - a sponsor of this very conference.
+???
+
+That's right. Stitch Fix. A sponsor of this very conference.
 
 And we know what this means.
-
  
 ---
 
-.center[<img src="anagrams.stitch.fix.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="anagrams.stitch.fix.png" width="100%" />]
+
+???
 
 Stitch Fix HAS NO ANAGRAMS. 
 
@@ -349,26 +386,32 @@ I mean for crying out loud
  
 ---
 
-.center[<img src="anagrams.chris.morris.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="anagrams.chris.morris.png" width="100%" />]
+
+???
 
 my own name has 43! Including such obvious ones as “Mr. Cirrhosis” 
 
  
 ---
 
+class: center, middle
+
 .center[<img src="profile.mr.c.png" width="50%" />]
 
-???  
+???
 
-(pause)
+hmmmmmm
  
 ---
 
-.center[<img src="anagrams.stitch.fix.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="anagrams.stitch.fix.png" width="100%" />]
+
+???
 
 How does Stitch Fix have zero?
 
@@ -379,29 +422,37 @@ That makes it an anagram prime. A prime-a-gram.
  
 ---
 
-.center[<img src="cryptocurrency.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="cryptocurrency.jpg" width="90%" />]
+
+???
 
 [fast]: I’ve started a cryptocurrency based on websites with
 prime-a-gram domain names. 
  
 ---
 
-.center[<img src="pizza.com.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="pizza.com.png" width="90%" />]
 
-Pizza.com is the only other one I’ve found so far
-BUT !!! if you 
-join me in the hall after this you can get in on the ground floor.
+???
+
+Pizza.com is the only other one I’ve found so far.
+
+BUT !!! 
+
+if you join me in the hall after this you can get in on the ground floor.
 
  
 ---
 
-.center[<img src="minswan.png" width="50%" />]
+class: center, middle
 
-???  
+# MINSWAN
+
+???
 
 We in the Ruby community have this acronym. Who knows this one? 
 
@@ -409,75 +460,84 @@ What are you doing? You don't have a microphone, no one can hear you.
 
 It means Matz Is Nice So We Are Nice.
 
-Except me, I'm kind of being a jerk. 
+Admittedly, except for me, I'm kind of being a jerk. 
 
 But it's ok, I have Impostor Syndrome, so I'm not really a jerk.
-
  
 ---
 
-.center[<img src="matz.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="matz.jpg" width="90%" />]
+
+???
 
 If Matz is the father of our community, 
 
  
 ---
 
-.center[<img src="why.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="why.jpg" width="90%" />]
 
-_why is clearly the guy who
-crashed your kid's bar mitzvah, but brought along his DJ gear and saved
-YOUR chunky bacon after you showed up with an dead iPod and left the 
-charging cable back in Jersey.
+???
+
+_why is clearly the guy who crashed your kid's bar mitzvah, but brought along
+his DJ gear and saved YOUR chunky bacon after you showed up with an dead iPod
+and left the charging cable back in Jersey.
 
  
 ---
 
-.center[<img src="whyday.now.germ.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="whyday.now.germ.png" width="90%" />]
 
-We owe _why more than a site that's been devoured by lonely gambling 
-addicted Germans.
+???
 
-Seven years ago, this very day, if today were August 19th, I
-created a special term in honor of whyday. 
+We owe _why more than a site that's been devoured by lonely gambling addicted
+Germans.
+
+Seven years ago, this very day, if today were August 19th, I created a special
+term in honor of whyday.
 
 Now, like any good conspiracy, I've lied to you. I've tricked you. 
 
  
 ---
 
-.center[<img src="anagrams.stitch.fix.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="anagrams.stitch.fix.png" width="100%" />]
 
-I told you Stitch Fix has no anagrams. It clearly has the number one there. Correct?
-Programmers?!
+???
+
+I told you Stitch Fix has no anagrams. It clearly has the number one there.
+Correct? Programmers?!
+
+---
+
+class: center, middle
+
+.center[<img src="anagrams.wicswac.png" width="100%" />]
+.center[<img src="twitter.wicswac.png" width="70%" />]
+
+???
 
 But there is a term that truly has NO anagrams, because it's pure nonsense.
 
- 
----
-
-.center[<img src="anagrams.wicswac.png" width="50%" />]
-
-???  
-
-
-And like any good developer, I registered that domain, and today am 
-unveiling wicswac.org:
+And like any good developer, I registered that nonsense as a domain, and today 
+am unveiling wicswac.org:
 
  
 ---
+
+class: center, middle
 
 .center[<img src="wicswac.org.png" width="50%" />]
 
-???  
+???
 
 Why Is Chunky, So We Are Chunky.
 
@@ -486,25 +546,31 @@ What kind of bacon did the foxes want? Chunky. What’s special about Chunky?
  
 ---
 
-.center[<img src="bacon.thick.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="bacon.thick.jpg" width="90%" />]
+
+???
 
 It’s thick. 
  
 ---
 
-.center[<img src="bacon.lux.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="bacon.lux.jpeg" width="90%" />]
+
+???
 
 It’s luxurious.
   
 ---
 
-.center[<img src="bacon.generous.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="bacon.generous.jpg" width="90%" />]
+
+???
 
 It’s ... generous.
 
@@ -512,27 +578,33 @@ So - ask yourself - What Would Why Do?
 
 ---
 
-.center[<img src="kip.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="kip.png" width="80%" />]
+
+???
 
 Like anyone could even know that.
 
  
 ---
 
-# You
+class: center, middle
 
-???  
+# you do you
+
+???
 
 You do you. Nobody wants skimpy bacon. Be generous. And
  
  
 ---
 
-.center[<img src="bacon.chunky.png" width="50%" />]
+class: center, middle
 
-???  
+.center[<img src="guide.chunky.bacon.png" width="90%" />]
+
+???
 
 Be Chunky.
 
