Add wicswac slides to front page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <br/>
     <h2><a href="elegance/elegance.html">In Search of Elegance</a><br/> (slides)</h2>
     <h2><a href="estimation/estimation.html">Vague Estimates are Vague</a><br/> (slides)</h2>
+    <h2><a href="wicswac/wicswac.html">Be Chunky</a><br/> (slides)</h2>
 </div>
 </body>
 </html>
